instance1/temp-retrieve/objects/Relationship_Type_Configuration__c/fields/From_Relationship_Type__c.field-meta.xml
<CustomField>
    <fullName>From_Relationship_Type__c</fullName>
    <inlineHelpText>What relationship will the primary account be.</inlineHelpText>
    <label>From Relationship Type</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Relationship_Type_Details</valueSetName>
    </valueSet>
</CustomField>