instance1/temp-retrieve/objects/Relationship_Type_Configuration__c/fields/Gender_for_Related_Account__c.field-meta.xml
<CustomField>
    <fullName>Gender_for_Related_Account__c</fullName>
    <inlineHelpText>This will make sure that the correct sex defined map is used.</inlineHelpText>
    <label>Gender for Related Account</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Male</fullName>
            </value>
            <value>
                <fullName>Female</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>