instance1/temp-retrieve/objects/Relationship_Type_Configuration__c/fields/To_Relationship_Type__c.field-meta.xml
<CustomField>
    <fullName>To_Relationship_Type__c</fullName>
    <inlineHelpText>What the From Relationship Type is mapped to</inlineHelpText>
    <label>To Relationship Type</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Relationship_Type_Details</valueSetName>
    </valueSet>
</CustomField>